INCLUDES = -I$(top_srcdir)/..

AUTOMAKE_OPTIONS = gnu no-dependencies

cxxsecurityinterfacesdir=$(pkgincludedir)/c++/security/interfaces

cxxsecurityinterfaces_HEADERS =\
DSAKey.h \
DSAParams.h \
DSAPrivateKey.h \
DSAPublicKey.h \
ECKey.h \
ECPrivateKey.h \
ECPublicKey.h \
RSAKey.h \
RSAPrivateCrtKey.h \
RSAPrivateKey.h \
RSAPublicKey.h
